--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Assets/DidimoSdk"]
-	path = Assets/DidimoSdk
+[submodule "Assets/Didimo"]
+	path = Assets/Didimo
 	url = git@github.com:didimoinc/didimo-digital-human-unity-sdk.git
